[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "wizardwebssh"
include_trailing_comma = true

[tool.poetry]
name = "wizardwebssh"
version = "1.7.3"
description = "Web based ssh client"
authors = ["Michael Ramsey <mike@hackerdise.me>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/meramsey/wizardwebssh"
homepage = "https://github.com/meramsey/wizardwebssh"
keywords = ["ssh", "terminal", "web", "pyqt"]
packages = [ { include = "wizardwebssh", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
paramiko = "^2.9.2"
tornado = "6.1"
tomlkit = "^0.9.0"
PyQt6 = {version = "^6.2.3", optional = true}
PyQt6-Qt6 = {version = "^6.2.3", optional = true}
PyQt6-sip = {version = "^13.2.1", optional = true}
PyQt6-WebEngine = {version = "^6.2.1", optional = true}
PyQt6-WebEngine-Qt6 = {version = "^6.2.3", optional = true}

[tool.poetry.dev-dependencies]
autoflake = ">=1.4"
black = ">=21.12b0"
isort = ">=5.7.0"
mypy = ">=0.812"
pytest = ">=6.2.2"
pytest-cov = ">=2.11.1"
pytest-randomly = ">=3.5.0"
pytest-sugar = ">=0.9.4"
pytest-xdist = ">=2.2.0"
types-toml = ">=0.10.1"
duty = ">=0.6.0"
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"
darglint = ">=1.5.8"
flake8 = ">=3.7.0"
flake8-bandit = ">=2.1.2"
flake8-black = ">=0.2.1"
flake8-bugbear = ">=20.11.1"
flake8-builtins = ">=1.5.3"
flake8-comprehensions = ">=3.3.1"
flake8-docstrings = ">=1.5.0"
flake8-pytest-style = ">=1.3.0"
flake8-string-format = ">=0.3.0"
flake8-tidy-imports = ">=4.2.1"
flake8-variables-names = ">=0.0.4"
pep8-naming = ">=0.11.1"
pydocstyle = ">=6.1.1"
wps-light = ">=0.15.2"
mkdocs = ">=1.2.2"
mkdocs-coverage = ">=0.2.1"
mkdocs-macros-plugin = ">=0.5.0"
mkdocs-material = ">=6.2.7"
mkdocstrings = ">=0.16.2"
types-mock = "^4.0.10"
types-paramiko = "^2.8.12"
types-cryptography = "^3.3.15"
types-ipaddress = "^1.0.8"
types-enum34 = "^1.1.8"

[tool.poetry.extras]
pyqt6 = ["PyQt6", "PyQt6-Qt6", "PyQt6-sip", "PyQt6-WebEngine", "PyQt6-WebEngine-Qt6"]

[tool.poetry.scripts]
wssh = "wizardwebssh.main:main"
